[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cua-internship"
version = "0.1.0"
description = "Trajectory replay and flakiness debugging tools for cua-driver"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "jinja2>=3.1",
  "pillow>=10.0",
  "imagehash>=4.3",
  "cua-bench-ui",
  "pyautogui>=0.9.54",
  "cua-driver",
]

[tool.hatch.build.targets.wheel]
packages = ["flakiness", "replay", "verifiers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv.sources]
cua-bench-ui = { workspace = true }
cua-driver = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.3.0",
]
